---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-12-29
  Compatibility:
    - Made sure all connections with Nauvis are hidden
  Changes:
    - Hidden all unnacesible Nauvis related items
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-11-16
  Bugfixes:
    - Fixed startup error caused by lack of tree seeding research
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-11-2
  Changes:
    - Portable fission reactor no longer requires fuel and outputs 1MW
  Bugfixes:
    - Fixed startup error caused by carbide circuits no longer existing
    - Fixed Spidertron was uncraftable
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-10-25
  Features:
    - Initial release