@@ -1,3 +1,1 @@
 require("prototypes.final-fixes.hide")
-
-data.raw["planet"]["nauvis"] = nil
