@@ -5,6 +5,8 @@ Date: 2025-12-29
     - Made sure all connections with Nauvis are hidden
   Changes:
     - Hidden all unnacesible Nauvis related items
+  Bugfixes:
+    - Fixed imersite rifle magazine was impossible to craft
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2025-11-16
